--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hugeicons/core-free-icons": "^3.1.1",
+    "@hugeicons/react": "^1.1.4",
+    "@tailwindplus/elements": "^1.0.21",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
